u6 adicionado